--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div id="icons">
             <i class="fa fw fa-diamond"></i><i class="fa fa-angle-double-left"></i>Give a diamond<br>
             <i class="fa fw fa-bomb"></i><i class="fa fa-angle-double-left"></i>Declare war<br>
-            <i class="fa fw fa-bolt"></i>    <i class="fa fa-angle-double-left"></i> Thunder!!
+            <i class="fa fw fa-bolt"></i>    <i class="fa fa-angle-double-left"></i> Thunder!!<br>
+            <i class="fa fa-wheelchair"></i><i class="fa fa-angle-double-left"></i>Have them sit on the throne
         </div>
         
         <div id = "banner">
