--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 
         <div id="icons">
-            <i class="fa fw fa-diamond"></i><i class="fa fa-angle-double-left"></i>Give a diamond<br>
-            <i class="fa fw fa-bomb"></i><i class="fa fa-angle-double-left"></i>Declare war<br>
-            <i class="fa fw fa-bolt"></i>    <i class="fa fa-angle-double-left"></i> Thunder!!<br>
-            <i class="fa fa-wheelchair"></i><i class="fa fa-angle-double-left"></i>Have them sit on the throne
+            <i class="fa fw fa-diamond left"></i><i class="fa fa-angle-double-left"></i>Give a diamond<br>
+            <i class="fa fw fa-bomb left"></i><i class="fa fa-angle-double-left"></i>Declare war<br>
+            <i class="fa fw fa-bolt left"></i>    <i class="fa fa-angle-double-left"></i> Thunder!!<br>
+            <i class="fa fa-wheelchair left"></i><i class="fa fa-angle-double-left"></i>Have them sit on the throne
         </div>
         
         <div id = "banner">
